--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     grid-template-columns: 80%;
     justify-content: center;
     margin-top: 3rem;
-    background: #828489;
+    background: #e2e6ef;
 }
 
 .addItems-container{
